[gd_scene load_steps=6 format=3 uid="uid://diyuylwbcecwg"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_jpwig"]
[ext_resource type="Texture2D" uid="uid://brcgdtrkhugj6" path="res://assets/game over/game over1.png" id="2_vrc4n"]
[ext_resource type="Texture2D" uid="uid://dstf3gjftag4s" path="res://assets/game over/game over2.png" id="3_0mw5s"]
[ext_resource type="Texture2D" uid="uid://dlh72y2rrru5a" path="res://assets/game over/game over3.png" id="4_fiy76"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_vrovv"]
frames = 3
frame_0/texture = ExtResource("2_vrc4n")
frame_1/texture = ExtResource("3_0mw5s")
frame_1/duration = 1.0
frame_2/texture = ExtResource("4_fiy76")
frame_2/duration = 1.0

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jpwig")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AnimatedTexture_vrovv")

[node name="Buttons" type="Control" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -20.0
offset_right = 16.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="BtnStart" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.5
offset_top = 11.5
offset_right = 88.5
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="BtnOptions" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.5
offset_top = 51.5
offset_right = 88.5
offset_bottom = 82.5
grow_horizontal = 2
grow_vertical = 2
text = "Options"

[node name="BtnExit" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.5
offset_top = 91.5
offset_right = 88.5
offset_bottom = 122.5
grow_horizontal = 2
grow_vertical = 2
text = "Exit"

[connection signal="pressed" from="Buttons/BtnStart" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="Buttons/BtnOptions" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="Buttons/BtnExit" to="." method="_on_btn_exit_pressed"]
